# quant-learning

./: README.md  roadmap.md
data/processed/: 000001_clean.csv  000002_clean.csv  300750_clean.csv  600028_clean.csv  600031_clean.csv  600036_clean.csv  600050_clean.csv  600104_clean.csv  600276_clean.csv  (+6 more)
docs/: 量化学习总结与后续规划.md
notebook/: 01_get_single_stock_data.ipynb  02_get_batch_stock_data.ipynb  03_ma_backtest.ipynb  04_ma_parameter_sensitivity.ipynb  05_ma_walk_forward.ipynb  06_ma_walk_forward_equity.ipynb  07_ma_market_regime_analysis.ipynb  08_ma_graded_position.ipynb  09_ma_graded_position_v2.ipynb  10_ma_graded_position_ablation.ipynb  11_ma_graded_position_combination.ipynb  conclusion.ipynb  external_validation.ipynb
reports/: ma_20_60_batch_summary_display.csv  ma_20_60_batch_summary_raw.csv  ma_best_param_out_sample_result.csv  ma_parameter_grid_in_sample_detail.csv  ma_parameter_grid_in_sample_summary.csv  ma_parameter_grid_in_sample_summary_display.csv  stock_metrics_ranking_display.csv  stock_metrics_ranking_raw.csv
src/: backtest.py  batch_stock_analysis.py  get_single_stock.py  graded_position_strategy.py  market_regime_analysis.py  metrics.py  parameter_sensitivity.py  walk_forward.py  walk_forward_equity.py
stage-1/: main.py  pyproject.toml
stage-1/data/processed/: 300750_clean.csv  600519_clean.csv
stage-1/data/raw/: 000001_qfq_daily.csv  300750_qfq_daily.csv
stage-1/src/: get_single_stock.py  metrics.py
stage-1/src/__pycache__/: get_a_stock_daily.cpython-311.pyc.3022698681392  get_single_stock.cpython-311.pyc.1906783191088
(+89 files in other folders)
